# oxideav-ac3

./: CHANGELOG.md  Cargo.toml  INVESTIGATION_R11.md  INVESTIGATION_R12.md  INVESTIGATION_R13.md  INVESTIGATION_R14.md  INVESTIGATION_R15.md  README.md
examples/: ba_detail_cmp.rs  ba_stage_trace.rs  bap_audit.rs  bap_hypothesis.rs  blksw_detail.rs  blksw_probe.rs  check_crc.rs  check_stream.rs  count_blksw.rs  count_spikes.rs  eac3_dump.rs  eac3_rate_curves.rs  encode_sine.rs  encoder_dump.rs  encoder_psnr.rs  encoder_psnr_ffmpeg.rs  exp_bap_cmp.rs  exp_spec_diff.rs  frame_align_solve.rs  frame_side.rs  fsnr_probe.rs  isolated_frame.rs  mantissa_bin_bisect.rs  mantissa_code_order.rs  mask_bisect.rs  mask_compare.rs  mask_spec_diff.rs  pcm_block_compare.rs  pcm_compare.rs  psnr_per_frame.rs  sample_compare.rs  side_info_align.rs  side_info_trace.rs
src/: audblk.rs  bsi.rs  crc.rs  decoder.rs  downmix.rs  drc.rs  eac3.rs  encoder.rs  imdct.rs  lib.rs  mdct.rs  syncinfo.rs  tables.rs  wave_order.rs
src/eac3/: aht.rs  ahtenc.rs  audfrm.rs  bsi.rs  decoder.rs  dsp.rs  ecpl.rs  ecplenc.rs  encoder.rs  mod.rs  spxenc.rs
src/eac3/tables/: aht_codebooks.rs  mod.rs
tests/: docs_corpus.rs  downmix_51.rs  downmix_ltrt.rs  eac3_ffmpeg.rs  ffmpeg_fixture.rs  multitone_railing.rs  robustness.rs
tests/fixtures/: transient_bursts_stereo.ac3
