[package]
name = "oxideav-ac3"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ac3"
authors = ["Mark Karpeles"]
description = "Pure-Rust AC-3 (Dolby Digital) audio decoder"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-ac3"
keywords = ["multimedia", "audio", "ac3", "dolby", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
